--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>HTML body tag</title>
+  <title>Criar nova conversa no Whatsapp sem salvar o número</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -24,17 +26,13 @@
   <style>
     body {
       font-size: 16px;
+      background-color: #25D366;
     }
     #main-container {
-      background-color: #25D366;
-      height: 100vh;
-    }
-    #form-container {
       background-color: white;
-      height: 400px;
-      width: 350px;
       border-radius: 25px;
-      padding: 0 20px;
+      padding: 30px 25px 60px;
+      margin-top: 10%
     }
     #input-phone {
       border-radius: 10px;
@@ -65,6 +63,7 @@
       font-weight: bold;
       font-size: 32px;
       margin-bottom: 10px;
+      text-align: center;
     }
     #description {
       margin-bottom: 30px;
@@ -75,12 +74,14 @@
   </style>
 </head>
 <body>
-  <div class="d-flex justify-content-center align-items-center" id="main-container">
-    <div id="form-container"  class="d-flex justify-content-center align-items-center flex-column">
-      <div id="main-title">Whatsapp</div>
-      <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
-      <input type="text" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
-      <a href="" class="d-block w-50 disabled-link" id="open-whatsapp-btn" target="_blank">Iniciar conversa</a>
+  <div class="row m-0 p-0">
+    <div class="col-xl-4 col-lg-6 col-md-10 col-11 mx-auto my-0 p-0">
+      <div id="main-container">
+        <div id="main-title">Whatsapp</div>
+        <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
+        <input type="text" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
+        <a href="" class="d-block w-50 disabled-link mx-auto" id="open-whatsapp-btn" target="_blank">Iniciar conversa</a>
+      </div>
     </div>
   </div>
 </body>
