feat: change input type

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div id="main-container">
         <div id="main-title">Whatsapp</div>
         <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
-        <input type="text" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
+        <input type="tel" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
         <a href="" class="d-block w-50 disabled-link mx-auto" id="open-whatsapp-btn" target="_blank">Iniciar conversa</a>
       </div>
     </div>
