--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div id="main-title">Whatsapp</div>
         <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
         <input type="tel" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
-        <a href="" class="d-block w-50 disabled-link mx-auto" id="open-whatsapp-btn" target="_blank">Iniciar conversa</a>
+        <a href="" class="d-block w-50 disabled-link mx-auto" id="open-whatsapp-btn" target="_blank">Abrir Whatsapp</a>
       </div>
     </div>
   </div>
