feat: change  max width

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       background-color: white;
       border-radius: 25px;
       padding: 30px 25px 60px;
-      margin-top: 10%
+      max-width: 450px;
     }
     #input-phone {
       border-radius: 10px;
@@ -74,9 +74,9 @@
   </style>
 </head>
 <body>
-  <div class="row m-0 p-0">
-    <div class="col-xl-4 col-lg-6 col-md-10 col-11 mx-auto my-0 p-0">
-      <div id="main-container">
+  <div class="row mx-0 p-0" style="margin-top: 10%;">
+    <div class="col-11 mx-auto my-0 p-0">
+      <div id="main-container" class="mx-auto">
         <div id="main-title">Whatsapp</div>
         <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
         <input type="tel" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
