--- a/index.html
+++ b/index.html
@@ -1,87 +1,22 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pt-BR">
 <head>
   <title>Criar nova conversa no Whatsapp sem salvar o número</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script>
-    $whatsappUrl = 'https://api.whatsapp.com/send?phone=55'
-    $(function(){
-      $('#input-phone').mask('(00) 999999999')
-      $( "#input-phone" ).on( "keyup", function() {
-        $phoneNumber = $(this).cleanVal()
-        if ($phoneNumber.length > 9) {
-          $('#open-whatsapp-btn').attr("href", `${$whatsappUrl}${$phoneNumber}`)
-          $('#open-whatsapp-btn').removeClass('disabled-link')
-        } else {
-          $('#open-whatsapp-btn').attr("href", '')
-          $('#open-whatsapp-btn').addClass('disabled-link') 
-        }
-      })
-    })
-  </script>
-  <style>
-    body {
-      font-size: 16px;
-      background-color: #25D366;
-    }
-    #main-container {
-      background-color: white;
-      border-radius: 25px;
-      padding: 30px 25px 60px;
-      max-width: 450px;
-    }
-    #input-phone {
-      border-radius: 10px;
-      padding: 8px;
-      border: 1px solid #a6a4a4;
-      outline: none;
-      margin-bottom: 30px;
-    }
-    #input-phone:focus {
-      border-color: #25D366;
-      box-shadow: 0 0 0 1px #25D366;
-    }
-    #open-whatsapp-btn {
-      color: white;
-      background-color: #05c14a;
-      outline: none;
-      border: none;
-      padding: 12px 6px;
-      border-radius: 12px;
-      text-decoration: none;
-      text-align: center;
-    }
-    .disabled-link {
-      opacity: 50%;
-      pointer-events: none;
-    }
-    #main-title {
-      font-weight: bold;
-      font-size: 32px;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-    #description {
-      margin-bottom: 30px;
-      color: rgb(140, 138, 138);
-      font-size: 14px;
-      text-align: center;
-    }
-  </style>
+  <script src="scripts.js"></script>
 </head>
 <body>
-  <div class="row mx-0 p-0" style="margin-top: 10%;">
-    <div class="col-11 mx-auto my-0 p-0">
-      <div id="main-container" class="mx-auto">
-        <div id="main-title">Whatsapp</div>
-        <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
-        <input type="tel" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
-        <a href="" class="d-block w-50 disabled-link mx-auto" id="open-whatsapp-btn" target="_blank">Abrir Whatsapp</a>
-      </div>
+  <div class="d-flex justify-content-center align-items-center" style="margin-top: 10%;">
+    <div id="main-container" class="mx-auto d-flex justify-content-center align-items-center flex-column">
+      <div id="main-title">Nova conversa</div>
+      <div id="description">Inicie uma conversa no Whatsapp sem precisar cadastrar o número no celular</div>
+      <input type="tel" class="d-block w-100" id="input-phone" placeholder="(99) 999999999"  autocomplete="off">
+      <a href="" class="d-block w-50 disabled-link mx-auto" id="open-whatsapp-btn" target="_blank">Abrir Whatsapp</a>
     </div>
   </div>
 </body>
